--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>新しいタブ</title>
+    <title>3D TPS - Motion Retargeting</title>
     <style>
         body { margin: 0; overflow: hidden; background-color: #000; }
         #crosshair { 
@@ -14,23 +14,20 @@
         #ui {
             position: absolute; bottom: 20px; left: 20px;
             color: white; font-family: sans-serif; background: rgba(0,0,0,0.5); padding: 15px;
-            border-radius: 8px; line-height: 1.6;
+            border-radius: 8px; pointer-events: none;
         }
     </style>
 </head>
 <body>
     <div id="crosshair"></div>
-    <div id="ui">
-        <b>CONTROLS</b><br>
-        E: 前進 / S: 後退 / Q: 左 / C: 右<br>
-        Space: ジャンプ / Click: 視点開始
-    </div>
+    <div id="ui">E:前 / S:後 / Q:左 / C:右 / Space:ジャンプ</div>
 
     <script type="importmap">
     {
         "imports": {
             "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-            "three/examples/jsm/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+            "three/examples/jsm/": "https://unpkg.com/three@0.160.0/examples/jsm/",
+            "fflate": "https://unpkg.com/fflate@0.8.0/lib/browser.module.js"
         }
     }
     </script>
@@ -38,8 +35,9 @@
     <script type="module">
         import * as THREE from 'three';
         import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
+        import { FBXLoader } from 'three/examples/jsm/loaders/FBXLoader.js';
 
-        // --- シーン・カメラ ---
+        // --- 基本設定 ---
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x87CEEB);
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -62,46 +60,37 @@
         const modelContainer = new THREE.Group(); 
         playerGroup.add(modelContainer);
 
-        let playerModel, mixer;
-        let actions = {};
-        let currentAction;
+        let mixer, walkAction;
+        const clock = new THREE.Clock();
 
-        const loader = new GLTFLoader();
-        loader.load('./fsb.glb', (gltf) => {
-            playerModel = gltf.scene;
+        // 1. GLBモデル（本体）の読み込み
+        const gltfLoader = new GLTFLoader();
+        gltfLoader.load('./fsb.glb', (gltf) => {
+            const playerModel = gltf.scene;
             playerModel.scale.set(1.5, 1.5, 1.5);
-            playerModel.rotation.y = Math.PI; // 前後逆を修正
+            playerModel.rotation.y = Math.PI; 
             modelContainer.add(playerModel);
 
-            // アニメーション設定
+            // アニメーションミキサー作成
             mixer = new THREE.AnimationMixer(playerModel);
-            console.log("--- アニメーション一覧 ---");
-            gltf.animations.forEach((clip) => {
-                actions[clip.name] = mixer.clipAction(clip);
-                console.log("- " + clip.name);
-            });
 
-            // 初期アニメーション（Idleや最初のアニメ）
-            if (gltf.animations.length > 0) {
-                currentAction = actions[gltf.animations[0].name];
-                currentAction.play();
-            }
+            // 2. FBXモーション（動き）の読み込み
+            const fbxLoader = new FBXLoader();
+            fbxLoader.load('./walk.fbx', (fbx) => {
+                if (fbx.animations.length > 0) {
+                    // FBXのアニメーションをGLBモデルに適用
+                    const clip = fbx.animations[0];
+                    walkAction = mixer.clipAction(clip);
+                    console.log("Walk animation loaded and retargeted.");
+                }
+            });
         });
 
-        // モーション切り替え関数（滑らかに繋ぐ）
-        function fadeToAction(name, duration = 0.2) {
-            if (!actions[name] || currentAction === actions[name]) return;
-            const nextAction = actions[name];
-            nextAction.reset().fadeIn(duration).play();
-            currentAction.fadeOut(duration);
-            currentAction = nextAction;
-        }
-
-        // 視点管理
+        // 視点・移動管理
         let cameraYaw = 0, cameraPitch = 0, modelYaw = 0;
         let velocityY = 0;
         const gravity = -0.012;
-        const clock = new THREE.Clock();
+        const keys = {};
 
         document.addEventListener('click', () => document.body.requestPointerLock());
         document.addEventListener('mousemove', (e) => {
@@ -111,48 +100,48 @@
             cameraPitch = Math.max(-Math.PI/3, Math.min(Math.PI/3, cameraPitch));
         });
 
-        const keys = {};
         window.addEventListener('keydown', (e) => keys[e.code] = true);
         window.addEventListener('keyup', (e) => keys[e.code] = false);
 
         function animate() {
             requestAnimationFrame(animate);
             const delta = clock.getDelta();
-            if (mixer) mixer.update(delta); // アニメーション更新
+            if (mixer) mixer.update(delta);
 
             if (document.pointerLockElement === document.body) {
                 const isMoving = keys['KeyE'] || keys['KeyS'] || keys['KeyQ'] || keys['KeyC'];
                 const moveSpeed = 0.15;
 
-                // --- 移動処理 ---
-                if (keys['KeyE']) { // 前
+                // --- アニメーション再生制御 ---
+                if (walkAction) {
+                    if (isMoving) {
+                        if (!walkAction.isRunning()) walkAction.play();
+                    } else {
+                        // 立ち止まったら徐々に停止（フェードアウト）
+                        walkAction.fadeOut(0.2);
+                        setTimeout(() => { if(!isMoving) walkAction.stop(); }, 200);
+                    }
+                }
+
+                // 移動処理 (E, S, Q, C)
+                if (keys['KeyE']) {
                     playerGroup.position.x -= Math.sin(cameraYaw) * moveSpeed;
                     playerGroup.position.z -= Math.cos(cameraYaw) * moveSpeed;
                 }
-                if (keys['KeyS']) { // 後
+                if (keys['KeyS']) {
                     playerGroup.position.x += Math.sin(cameraYaw) * moveSpeed;
                     playerGroup.position.z += Math.cos(cameraYaw) * moveSpeed;
                 }
-                if (keys['KeyQ']) { // 左
+                if (keys['KeyQ']) {
                     playerGroup.position.x -= Math.cos(cameraYaw) * moveSpeed;
                     playerGroup.position.z += Math.sin(cameraYaw) * moveSpeed;
                 }
-                if (keys['KeyC']) { // 右
+                if (keys['KeyC']) {
                     playerGroup.position.x += Math.cos(cameraYaw) * moveSpeed;
                     playerGroup.position.z -= Math.sin(cameraYaw) * moveSpeed;
                 }
 
-                // --- アニメーション切り替え判定 ---
-                // ※ fsb.glb内の名前に合わせて 'Walk' や 'Idle' を書き換えてください
-                if (isMoving) {
-                    // もし名前が分からない場合は一旦 index で指定も可能
-                    // 例: fadeToAction(Object.keys(actions)[1]); 
-                    fadeToAction('Walk'); 
-                } else {
-                    fadeToAction('Idle');
-                }
-
-                // ジャンプ
+                // ジャンプ処理
                 velocityY += gravity;
                 playerGroup.position.y += velocityY;
                 if (playerGroup.position.y < 0) {
@@ -163,11 +152,10 @@
                     velocityY = 0.25;
                 }
 
-                // 視点追従ロジック
+                // 視点追従（デッドゾーンあり）
                 let diff = cameraYaw - modelYaw;
                 while (diff < -Math.PI) diff += Math.PI * 2;
                 while (diff > Math.PI) diff -= Math.PI * 2;
-
                 const threshold = Math.PI / 2.5; 
                 if (isMoving) {
                     modelYaw += diff * 0.15;
@@ -187,6 +175,12 @@
             renderer.render(scene, camera);
         }
         animate();
+
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
     </script>
 </body>
 </html>
